tambah adapter admin

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_marginHorizontal="20dp"
-        android:text="Convergence"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
     <LinearLayout
+        android:layout_centerVertical="true"
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="20dp">
+        <TextView
+            android:text="Convergence"
+            android:fontFamily="sans-serif-thin"
+            android:textColor="@color/blueanedot"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <com.google.android.material.textfield.TextInputLayout
             android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
@@ -48,10 +49,9 @@
             android:id="@+id/btnSignin"
             android:backgroundTint="@color/blueanedot"
             android:layout_marginVertical="10dp"
+            app:cornerRadius="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAllCaps="false"
             android:text="Sign in"/>
     </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
