--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,17 +17,17 @@
         android:layout_marginTop="20dp"
         android:src="@mipmap/ic_salaryman_foreground"
         app:civ_circle_background_color="@color/blueanedot" />
+
     <TextView
+        android:id="@+id/names"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageView"
-        android:layout_marginLeft="20dp"
         android:layout_centerVertical="true"
-        android:id="@+id/name"
-        android:text="Dev 1"
-        android:textSize="14sp"
-        android:textColor="@color/white"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/imageView"
         android:fontFamily="sans-serif-medium"
-        />
+        android:text="Dev 1"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 </RelativeLayout>
