--- a/app/src/main/res/layout/modal_detailformadmin.xml
+++ b/app/src/main/res/layout/modal_detailformadmin.xml
@@ -4,6 +4,9 @@
     android:layout_height="wrap_content"
     android:background="@color/lightgreyanedot"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -283,6 +286,31 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textColor="@color/blueanedot"
+                            android:text="Budget"
+                            android:gravity="left"/>
+                        <TextView
+                            android:id="@+id/txtBudget"
+                            android:textSize="12sp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
+                            android:text=": Belum Ditentukan"
+                            android:gravity="left"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:textSize="12sp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:layout_marginVertical="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/blueanedot"
                             android:text="Status"
                             android:gravity="left"/>
                         <TextView
@@ -323,6 +351,31 @@
                 android:text="LIHAT DETAIL HOTEL"
                 android:textSize="15sp"/>
             <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="horizontal">
+               <com.google.android.material.textfield.TextInputLayout
+                   android:gravity="center"
+                   android:background="@color/white"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   app:hintTextColor="@color/blueanedot"
+                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                   android:hint="Budget Perjalanan">
+                   <com.google.android.material.textfield.TextInputEditText
+                       android:textColor="@color/blueanedot"
+                       android:id="@+id/edtBudget"
+                       android:gravity="center"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:inputType="number"
+                       android:text=""/>
+               </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+            <LinearLayout
 
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
@@ -357,5 +410,5 @@
                 android:textSize="15sp"/>
         </LinearLayout>
     </LinearLayout>
-
+    </ScrollView>
 </RelativeLayout>
