--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/txtNama"
                     android:layout_marginTop="20dp"
                     android:layout_marginHorizontal="20dp"
                     android:layout_width="match_parent"
@@ -30,6 +31,7 @@
                     android:textSize="20sp"
                     android:textColor="@color/black"/>
                 <TextView
+                    android:id="@+id/txtKata"
                     android:layout_marginTop="10dp"
                     android:layout_marginHorizontal="20dp"
                     android:layout_width="match_parent"
